Fixed an issue with the observers not working as well as creating excess test executions